fix search button increased size and text spacing

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/search2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/search2.less
@@ -180,3 +180,14 @@ html#adobeguides-dark-contrast {
 .custom-search-container {
   margin-bottom: 0.7rem;
 }
+
+@media (max-width: 480px) {
+  html.adobeguides-text-size{
+    .header .cmp-search__clear-icon {
+      top: 0.4rem;
+    }
+    .header .cmp-search__icon{
+      top: 0.4rem;
+    }
+  }
+}
